--- a/styles.css
+++ b/styles.css
@@ -148,13 +148,13 @@ header nav li {
 
 .hero h1 {
     font: bold 60px "Open Sans", sans-serif;
-    text-shadow: 1px 1px whitesmoke;
+    text-shadow: 1px 1px 2px whitesmoke;
     margin-bottom: 15px;
 }
 
 .hero h3 {
     font: bold 28px "Open Sans", sans-serif;
-    text-shadow: 1px 1px whitesmoke;
+    text-shadow: 1px 1px 2px whitesmoke;
     margin-bottom: 40px;
 }
 
