--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,6 @@ header {
     align-items: center;
     padding: 35px 100px 0;
     animation: 1s fadein 0.5s forwards;
-    text-shadow: 1px 1px 2px black;
     opacity: 0;
     color: #fff;
 }
@@ -132,17 +131,16 @@ header nav li {
     position: relative;
     justify-content: center;
     text-align: center;
-    width: 100%;
     min-height: 100vh;
-    overflow: hidden;
     color: #424242; 
 }
 
-.hero .background-video {
-    position: fixed;
+.hero .background-image {
+    position: absolute;
     top: 0;
     left: 0;
-    min-width: 100%;
+    width: 100%;
+    height: 100%;
     background-size: cover;
     z-index: -1;
     background-color: #80a3db;
@@ -197,9 +195,6 @@ header nav li {
 }
 
 /* Destination Section */
-.destinations {
-    background-color: #fff;
-}
 
 .destinations .grid li {
     height: 350px;
@@ -256,10 +251,6 @@ header nav li {
 }
 
 /* Testimonials Section */
-
-.testimonials {
-    background-color: #fff;
-}
 
 .testimonials .quote {
     font-size: 22px;
