--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,7 @@ header {
     animation: 1s fadein 0.5s forwards;
     opacity: 0;
     color: #fff;
+    text-shadow: 1px 1px 2px black; 
 }
 
 @keyframes fadein {
@@ -132,15 +133,15 @@ header nav li {
     justify-content: center;
     text-align: center;
     min-height: 100vh;
-    color: #424242; 
+    color: #424242;
 }
 
-.hero .background-image {
-    position: absolute;
+.hero .background-video {
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
     background-size: cover;
     z-index: -1;
     background-color: #80a3db;
@@ -195,6 +196,10 @@ header nav li {
 }
 
 /* Destination Section */
+
+.destinations {
+    background-color: #fff;
+}
 
 .destinations .grid li {
     height: 350px;
@@ -251,6 +256,10 @@ header nav li {
 }
 
 /* Testimonials Section */
+
+.testimonials {
+    background-color: #fff;
+}
 
 .testimonials .quote {
     font-size: 22px;
